prevent overflow

--- a/client/lampenhaus/src/components/EmailListView/EmailListView.css
+++ b/client/lampenhaus/src/components/EmailListView/EmailListView.css
@@ -9,3 +9,7 @@
 .hidden {
     visibility: hidden;
 }
+
+.mini-matrix-card .card-body {
+    overflow: hidden;
+}
